--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <li>Que toda aprendan a codear.</li>    
    </ol>
    
-   <img src="https://upload.wikimedia.org/wikipedia/commons/5/55/Grace_Hopper.jpg"/>
+   <div align=center> <img src="https://upload.wikimedia.org/wikipedia/commons/5/55/Grace_Hopper.jpg"/>
    
 </body>
 </html>
